# overlay-util

./: CMakeLists.txt  README.md
src/graphic_subsystem/: CMakeLists.txt
src/graphic_subsystem/private/Graphic/: GraphicSubsystemDX11.cpp  GraphicSubsystemDX11.h  GraphicSubsystemDXGI.cpp
src/graphic_subsystem/public/Graphic/: GraphicSubsystem.h  GraphicSubsystemDXGI.h
src/simple_hook_helper/: CMakeLists.txt
src/simple_hook_helper/private/HOOK/: keyboard_event.c
src/simple_hook_helper/private/RPC/: JrpcHookHelper.cpp  JrpcHookHelperEvent.cpp  JrpcHookHelperInternal.cpp  JrpcHookHelperInternal.h
src/simple_hook_helper/private/windows/: sdl_helper_win.c
src/simple_hook_helper/private/windows/HOOK/: hook_synchronized.cpp
src/simple_hook_helper/public/HOOK/: hook_info.h  hook_synchronized.h  input_event.h  keyboard_event.h  mouse_event.h  window_event.h  window_info.h
src/simple_hook_helper/public/RPC/: JrpcHookHelper.h  JrpcHookHelperEvent.h
src/simple_hook_helper/public/windows/: sdl_helper_win.h
